# skedm

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
doc/: Makefile  api.rst  conf.py  index.rst  make.bat  quick_start.rst  requirements.txt  user_guide.rst
examples/: ccm_example.py  embed_dimension_example.py  predict_nonlinear_example.py  simplex_example.py  smap_example.py
sciedm/: __init__.py  _version.py  aux_func.py  ccm.py  edm_indices.py  edm_params.py  embed.py  embed_dimension.py  formatting.py  neighbors.py  predict_nonlinear.py  simplex.py  smap.py  validate.py
sciedm/data/: S12CD-S333-SumFlow_1980-2005.csv
sciedm/tests/: __init__.py  test_common.py  test_simplex.py  tests.py
sciedm/tests/validation/: CCM_anch_sst_valid.csv  CCM_nan_valid.csv
sciedm/utils/tests/: test_discovery.py
skedm/: __init__.py  aux_func.py  edm_indices.py  edm_params.py  embed.py  formatting.py  simplex.py  smap.py  validate.py
skedm/tests/: test_common.py  test_simplex.py
skedm/utils/: discovery.py
